# souk

./: Cargo.toml  PLAN.md  README.md  cliff.toml  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
.sdd/memory/: constitution.md
crates/souk/: CHANGELOG.md  Cargo.toml
crates/souk-core/: CHANGELOG.md  Cargo.toml
crates/souk-core/src/: discovery.rs  error.rs  lib.rs  version.rs
crates/souk-core/src/ci/: hooks.rs  install_hooks.rs  install_workflows.rs  mod.rs
crates/souk-core/src/ops/: add.rs  atomic.rs  init.rs  mod.rs  prune.rs  remove.rs  update.rs
crates/souk-core/src/resolution/: mod.rs  plugin.rs  skill.rs
crates/souk-core/src/review/: marketplace.rs  mod.rs  plugin.rs  provider.rs  skill.rs
crates/souk-core/src/types/: marketplace.rs  mod.rs  plugin.rs  skill.rs  version_constraint.rs
crates/souk-core/src/validation/: extends.rs  marketplace.rs  mod.rs  plugin.rs
crates/souk/src/: cli.rs  main.rs  output.rs
crates/souk/src/commands/: add.rs  ci.rs  init.rs  mod.rs  prune.rs  remove.rs  review.rs  update.rs  validate.rs
crates/souk/tests/: lifecycle_test.rs  prune_test.rs  validate_test.rs
discovery/: OPEN_QUESTIONS.md  SPEC.md  STATE.md
discovery/archive/: DECISIONS.md  ITERATIONS.md  RESEARCH.md  REVISIONS.md
docs/plans/: 2026-02-26-safety-improvements-design.md  2026-02-26-safety-improvements.md  2026-02-26-souk-cli.md  2026-02-27-prune-design.md  2026-02-27-prune-implementation.md  EXECUTE.md
tests/fixtures/invalid-plugin/.claude-plugin/: plugin.json
tests/fixtures/valid-marketplace/.claude-plugin/: marketplace.json
tests/fixtures/valid-marketplace/plugins/good-plugin/.claude-plugin/: plugin.json
tests/fixtures/valid-marketplace/plugins/good-plugin/skills/test-skill/: SKILL.md
