[package]
name = "souk-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
semver = { version = "1", features = ["serde"] }
walkdir = "2"
tempfile = "3"
regex = "1"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
