[package]
name = "souk-core"
version.workspace = true
edition.workspace = true
description = "Core library for managing Claude Code plugin marketplaces"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
semver = { version = "1", features = ["serde"] }
walkdir = "2"
tempfile = "3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
