[package]
name = "souk"
version.workspace = true
edition.workspace = true
description = "CLI tool for managing Claude Code plugin marketplaces"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "souk"
path = "src/main.rs"

[dependencies]
souk-core = { path = "../souk-core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
